fixed scalability issues for contact page

--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
 <body style="background-color: rgb(255, 255, 157)">
 
     <nav>
-        <div class="nav-container container-sm">
+        <div class="nav-container container-fluid">
                 <div class="row p-2 align-items-center">
-                <div class="logo-container col">
+                <div class="logo-container col-sm">
                     <a href="index.html"> 
 
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door-fill" viewBox="0 0 16 16">
@@ -23,14 +23,14 @@
                         </svg>
                     </a>
                 </div>
-                <div class="buttons-container col ">
+                <div class="buttons-container col-sm ">
         
                     <a href="about.html">About Us</a>
                     <a href="solutions.html">Solutions</a>
                     <a href="partners.html">Partners</a>
                     <a href="contact.html">Contact</a>
                 </div>
-                <div class="lang-drop col">
+                <div class="lang-drop col-sm">
                     <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" style="border: 1px solid gold; background-color: black; color: gold;" data-bs-toggle="dropdown" aria-expanded="false">
                          Enghlish
@@ -46,7 +46,7 @@
     </nav>
 
     <!-- header -->
-    <div class="container-sm" style="height: 75vh; background-color: rgb(255, 255, 157) ">
+    <div class="container-fluid" style="height: 75vh; background-color: rgb(255, 255, 157) ">
         <div class="row hd-a align-items-center justify-content-center" style="border-bottom: solid 3px gold;">
             <div class="col hd-a">
                 <h1>Contact Us</h1>
@@ -60,8 +60,8 @@
                    <br> Feel free to reach out to us and we'll get back to you as soon as possible.
         </div>
     </div>
-    <section class="w-100 p-4 d-flex text-center justify-content-center pb-4">
-        <form style="width: 30rem;">
+    <section class="w-80 p-4 d-flex text-center justify-content-center pb-4">
+        <form>
           <!-- Message input -->
           <div class="form-outline mb-4">
             <textarea class="text-fb" placeholder="Type your message here..." rows="10"></textarea>
