--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <nav>
         <div class="nav-container container-sm">
-                <div class="row p-2 align-items-center">
+                <div class="row p-2 text-center justify-content-around">
                 <div class="logo-container col">
                     <a href="index.html"> 
 
