fixed scalability issues on the about page

--- a/about.html
+++ b/about.html
@@ -53,25 +53,25 @@
                         <h1>ABOUT US</h1>
                     </div>
                 </div>
-               <div class="row justify-content-around mt-5 mb-5">
-                       <div class="col">
-                            <div class="card" style="margin-left: 15%; width: 20rem; border: solid 1px gold;">
+               <div class="row justify-content-center m-5">
+                       <div class="col-sm mb-2">
+                            <div class="card" style="margin-left: 15%; width: 40; border: solid 1px gold;">
                                 <img src="./images/alogo-2.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
-                            <div class="card" style=" margin-left:15%; width: 20rem;border: solid 1px gold">
+                        <div class="col-sm mb-2">
+                            <div class="card" style=" margin-left:15%; width: 40;border: solid 1px gold">
                                 <img src="./images/alogo-2.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
-                            <div class="card" style=" margin-left: 15%; width: 20rem;border: solid 1px gold">
+                        <div class="col-sm mb-2">
+                            <div class="card" style=" margin-left: 15%; width: 40;border: solid 1px gold">
                                 <img src="./images/alogo-2.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
