--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
         
              </div>
         </div>
-        <div class="container-sm justify-content-between" style="border-top: solid 2px gold;">
+        <div class="container-sm justify-content-between mt-3" style="border-top: solid 2px gold;">
             <div class="row justify-content-around">
                 <div class="col mt-3 mb-3">
                     <p class="ft-p">Copyright © Entex All Rights Reserved</p>
