changed navs and footers

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
 
     <nav>
-        <div class="nav-container container-sm">
-                <div class="row p-2 text-center justify-content-around">
-                <div class="logo-container col-sm">
+        <div class="nav-container container-fluid">
+                <div class="row p-2 text-center align-items-center">
+                <div class="logo-container col">
                     <a href="index.html"> 
 
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door-fill" viewBox="0 0 16 16">
