--- a/solutions.html
+++ b/solutions.html
@@ -13,8 +13,8 @@
 <body>
 
     <nav>
-        <div class="nav-container container-sm">
-                <div class="row p-2 align-items-center">
+        <div class="nav-container container-fluid">
+                <div class="row p-2 text-center align-items-center">
                 <div class="logo-container col">
                     <a href="index.html"> 
 
@@ -23,14 +23,14 @@
                         </svg>
                     </a>
                 </div>
-                <div class="buttons-container col ">
+                <div class="buttons-container col-sm ">
         
                     <a href="about.html">About Us</a>
                     <a href="solutions.html">Solutions</a>
                     <a href="partners.html">Partners</a>
                     <a href="contact.html">Contact</a>
                 </div>
-                <div class="lang-drop col">
+                <div class="lang-drop col-sm">
                     <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" style="border: 1px solid gold; background-color: black; color: gold;" data-bs-toggle="dropdown" aria-expanded="false">
                          Enghlish
@@ -246,7 +246,7 @@
         <div class="row">
             <div class="col">
                 <div class="row">
-                    <div class="col">
+                    <div class="col-sm">
                         <p >
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="gold" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
                             <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
@@ -255,7 +255,7 @@
                         </p>
                     </div>
 
-                    <div class="col">
+                    <div class="col-sm">
                         <p >
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="gold" class="bi bi-cpu-fill" viewBox="0 0 16 16">
                                 <path d="M6.5 6a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3z"/>
@@ -267,7 +267,7 @@
                 </div>
                 
             </div>
-            <div class="col">
+            <div class="col-sm">
                 <p>
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="gold" class="bi bi-currency-exchange" viewBox="0 0 16 16">
                         <path d="M0 5a5.002 5.002 0 0 0 4.027 4.905 6.46 6.46 0 0 1 .544-2.073C3.695 7.536 3.132 6.864 3 5.91h-.5v-.426h.466V5.05c0-.046 0-.093.004-.135H2.5v-.427h.511C3.236 3.24 4.213 2.5 5.681 2.5c.316 0 .59.031.819.085v.733a3.46 3.46 0 0 0-.815-.082c-.919 0-1.538.466-1.734 1.252h1.917v.427h-1.98c-.003.046-.003.097-.003.147v.422h1.983v.427H3.93c.118.602.468 1.03 1.005 1.229a6.5 6.5 0 0 1 4.97-3.113A5.002 5.002 0 0 0 0 5zm16 5.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0zm-7.75 1.322c.069.835.746 1.485 1.964 1.562V14h.54v-.62c1.259-.086 1.996-.74 1.996-1.69 0-.865-.563-1.31-1.57-1.54l-.426-.1V8.374c.54.06.884.347.966.745h.948c-.07-.804-.779-1.433-1.914-1.502V7h-.54v.629c-1.076.103-1.808.732-1.808 1.622 0 .787.544 1.288 1.45 1.493l.358.085v1.78c-.554-.08-.92-.376-1.003-.787H8.25zm1.96-1.895c-.532-.12-.82-.364-.82-.732 0-.41.311-.719.824-.809v1.54h-.005zm.622 1.044c.645.145.943.38.943.796 0 .474-.37.8-1.02.86v-1.674l.077.018z"/>
@@ -283,14 +283,14 @@
 
 <!-- here the body ends and the footer starts -->
 
- <footer>
+<footer>
     <div class="container-sm justify-content-between">
         <div class="row justify-content-between">
             <div class="col-sm">
                 <a href="index.html">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door-fill" viewBox="0 0 16 16">
                         <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5Z"/>
-                    </svg>
+                      </svg>
                 </a>
                  <a href="instagram.com">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
@@ -325,8 +325,8 @@
                     <a href="partners.html">Partners</a>
                     <a href="contact.html">Contact</a>
                 </div>
-                <div class="lang-drop col-sm ">
-                    <div class="dropdown">
+                <div class="lang-drop col-sm mt-3">
+                    <div class="dropdown ">
                         <button class="btn btn-secondary dropdown-toggle mt-3" type="button" style="border: 1px solid gold; background-color: black; color: gold;" data-bs-toggle="dropdown" aria-expanded="false">
                          Enghlish
                         </button>
