--- a/itable.html
+++ b/itable.html
@@ -49,14 +49,14 @@
 
         <div class="container-sm">
             <div class="row">
-                <div class="col hd-a">
+                <div class="col-sm hd-a">
                     <h1 style="color: gold; border-bottom: solid 3px black; text-align: center;">ITable</h1>
                 </div>
             </div>
 
 
             <div class="row mt-3">
-                <div class="col hd-a">
+                <div class="col-sm hd-a">
                     <h3>Touching the Cosmos:
                         <br>
                         Interactive Encounters with the sky and planets
@@ -66,7 +66,7 @@
 
 
             <div class="row">
-                <div class="col mt-3 mb-5 hd-a">
+                <div class="col-sm mt-3 mb-5 hd-a">
                     <p style="font-size: large; color: rgb(173, 173, 173);">
                         Whether the visitors of the Astronomical Observatory ”Vasile Urseanu” are embarking on a voyage with the Cassini Probe, discovering Saturn's enchanting moons, or testing their knowledge with astronomical trivia, the interactive experience brings the mysteries of the sky and planets to life.                     </p>
                 </div>
@@ -76,12 +76,12 @@
         <div class="container-sm">
             <div class="row mb-5">
 
-                <div class="col">
-                    <iframe width="600" height="338" src="https://www.youtube.com/embed/Y4B_zX9KHwE" title="IDS   Vasile Urseanu   masa EN" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>   
+                <div class="col-sm">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Y4B_zX9KHwE" title="IDS   Vasile Urseanu   masa EN" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>   
                  </div>
 
 
-                <div class="col" >
+                <div class="col-sm" >
                     <h5 class="card-title p-3" style="  background-color: gold;">Read more about the project</h5>
                      <div class="card-body">
                           <p class="card-text p-3 mb-3"style="border: solid 1px gold;">The well-known astronomical observatory in Bucharest is named after the Romanian astronomer Vasile Urseanu, a pioneer in astronomy in the country. With a rich history dating back to its founding in 1908, it has played a significant role in promoting astronomy and space sciences in Romania. The observatory is committed to public outreach and education and is equipped with various telescopes for observing the night sky that allows amateur astronomers and the general public to explore celestial phenomena.
@@ -107,9 +107,9 @@
           
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col-sm">
                     <div class="row">
-                        <div class="col text-center">
+                        <div class="col-sm text-center">
                             <p>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="gold" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
                                 <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
@@ -118,7 +118,7 @@
                             </p>
                         </div>
 
-                        <div class="col text-center">
+                        <div class="col-sm text-center">
                             <p>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="gold" class="bi bi-cpu-fill" viewBox="0 0 16 16">
                                     <path d="M6.5 6a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3z"/>
@@ -130,7 +130,7 @@
                     </div>
                     
                 </div>
-                <div class="col text-center">
+                <div class="col-sm text-center">
                     <p>
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="gold" class="bi bi-currency-exchange" viewBox="0 0 16 16">
                             <path d="M0 5a5.002 5.002 0 0 0 4.027 4.905 6.46 6.46 0 0 1 .544-2.073C3.695 7.536 3.132 6.864 3 5.91h-.5v-.426h.466V5.05c0-.046 0-.093.004-.135H2.5v-.427h.511C3.236 3.24 4.213 2.5 5.681 2.5c.316 0 .59.031.819.085v.733a3.46 3.46 0 0 0-.815-.082c-.919 0-1.538.466-1.734 1.252h1.917v.427h-1.98c-.003.046-.003.097-.003.147v.422h1.983v.427H3.93c.118.602.468 1.03 1.005 1.229a6.5 6.5 0 0 1 4.97-3.113A5.002 5.002 0 0 0 0 5zm16 5.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0zm-7.75 1.322c.069.835.746 1.485 1.964 1.562V14h.54v-.62c1.259-.086 1.996-.74 1.996-1.69 0-.865-.563-1.31-1.57-1.54l-.426-.1V8.374c.54.06.884.347.966.745h.948c-.07-.804-.779-1.433-1.914-1.502V7h-.54v.629c-1.076.103-1.808.732-1.808 1.622 0 .787.544 1.288 1.45 1.493l.358.085v1.78c-.554-.08-.92-.376-1.003-.787H8.25zm1.96-1.895c-.532-.12-.82-.364-.82-.732 0-.41.311-.719.824-.809v1.54h-.005zm.622 1.044c.645.145.943.38.943.796 0 .474-.37.8-1.02.86v-1.674l.077.018z"/>
