fixed footer on ilav page

--- a/ilav.html
+++ b/ilav.html
@@ -282,7 +282,7 @@
                 </div>
             </div>
         </div>
-
+        </div>
         <footer>
             <div class="container-sm justify-content-between">
                 <div class="row justify-content-between">
