added margins on partners logos and cards

--- a/solutions.html
+++ b/solutions.html
@@ -67,7 +67,7 @@
 
 
         <div class="row mt-5 mb-5 ml-3 ">
-            <div class="col-sm">
+            <div class="col-sm mb-2">
                 <div class="card align-items-center p-2" style="width: 40; border: solid 1px black;">
                     <img src="./images/alogo-2.webp" class="card-img-top" alt="...">
                     <div class="card-body" style="width:40">
@@ -100,7 +100,7 @@
                 </div>
             </div>
 
-            <div class="col-sm">
+            <div class="col-sm mb-2">
                 <div class="card align-items-center p-2" style="width: 40; border: solid 1px black;">
                     <img src="./images/alogo-2.webp" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -133,7 +133,7 @@
                 </div>
             </div>
 
-            <div class="col-sm">
+            <div class="col-sm mb-2">
                 <div class="card align-items-center p-2" style="width: 40; border: solid 1px black;">
                     <img src="./images/alogo-2.webp" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -166,7 +166,7 @@
                 </div>
             </div>
 
-            <div class="col-sm">
+            <div class="col-sm mb-2">
                 <div class="card align-items-center p-2" style="width: 40; border: solid 1px black;">
                     <img src="./images/alogo-2.webp" class="card-img-top" alt="...">
                     <div class="card-body">
